# SOS

./: .gitignore  README.md  SOS.py  SOSv2.py  make_img.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  ska_mid.cfg  ska_mid133.cfg  ska_mid133_new.cfg  ska_mid197_new.cfg
examples/: config_example.yaml  example_config.py  example_image_maker.py
sos/: __init__.py  constants.py
sos/config/: __init__.py  config_loader.py
sos/core/: __init__.py  image_maker.py  visibility_sim.py
sos/utils/: __init__.py  coordinates.py  logger.py  validators.py
tests/: conftest.py  test_coordinates.py  test_cosmology.py  test_validators.py
