"""Project configuration using pyproject.toml."""

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sos-ska"
version = "2.0.0"
description = "SKA Observation Simulator: Simulate SKA1_Mid visibility using CASA toolkit"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Deepak Deo", email = "deepak@example.com"},
    {name = "Dr. Ruta Kale", email = "ruta@example.com"},
]
keywords = ["ska", "simulation", "visibility", "radio", "astronomy", "casa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy>=1.19.0",
    "PyYAML>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
    "isort>=5.9",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.12",
]

[project.urls]
Homepage = "https://github.com/deepakdeo/SOS"
Documentation = "https://github.com/deepakdeo/SOS/wiki"
Repository = "https://github.com/deepakdeo/SOS"
"Bug Tracker" = "https://github.com/deepakdeo/SOS/issues"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
